# sweetie_bot_logger

./: CMakeLists.txt  README.md  package.xml
include/sweetie_bot_logger/: logger.hpp
scripts/: logger.cpf  test_logger.ops  test_logger_ocl.ops
src/: Log4cpp-plugin.cpp  LoggerTest-component.hpp  RosAppender-component.hpp
sweetie_bot_logger/: CMakeLists.txt  README.md  package.xml
sweetie_bot_logger/include/sweetie_bot_logger/: logger.hpp
sweetie_bot_logger/scripts/: log_ocl.cpf  logger.log4cpp  logger.lua  logger_conf.ops  logger_log4cpp.log4cpp  logger_ocl.cpf  logger_setup.ops  logging.cpf  logging.log4cpp  logging.ops  logging_properties.cpf  test_logger.ops  test_logger_log4cpp.lua  test_logger_log4cpp.ops  test_logger_ocl.ops  test_logger_olc.ops
sweetie_bot_logger/src/: CMakeLists.txt  Log4cpp-plugin.cpp  LoggerTest-component.cpp  LoggerTest-component.hpp  RosAppender-component.cpp  RosAppender-plugin.cpp  RosAppender.cpp  RosAppender.hpp  logger.cpp  logger.hpp
