<package format="2">
  <name>sweetie_bot_logger</name>
  <version>1.0.0</version>
  <description>log4cpp based logger component.</description>
  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>disRecord</author>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>ocl</depend>
  <depend>ocl-logging</depend>
  <depend>orocos-log4cpp</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>rtt_rosgraph_msgs</depend>
  <depend>rtt_roscomm</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_roscomm</plugin_depend>
		  <plugin_depend>rtt_rosgraph_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
