<package>
  <name>sweetie_bot_logger</name>
  <version>1.0.0</version>
  <description>log4cpp based logger component.</description>
  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>disRecord</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>log4cpp</build_depend>
  <build_depend>orocos-log4cpp</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rtt_rosgraph_msgs</build_depend>
  <build_depend>rtt_roscomm</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>log4cpp</run_depend>
  <run_depend>orocos-log4cpp</run_depend>
  <run_depend>rtt_rosgraph_msgs</run_depend>
  <run_depend>rtt_roscomm</run_depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_roscomm</plugin_depend>
		  <plugin_depend>rtt_rosgraph_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
